Fixed spacing beer

--- a/src/app/beer/beer.component.scss
+++ b/src/app/beer/beer.component.scss
@@ -5,4 +5,5 @@
 
 .bottom-row {
     margin-top: 1em;
+    margin-bottom: 1em;
 }
